tests/baselines/reference/emitThisInSuperMethodCall.errors.txt
tests/cases/compiler/emitThisInSuperMethodCall.ts(10,17): error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.
tests/cases/compiler/emitThisInSuperMethodCall.ts(17,17): error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.
tests/cases/compiler/emitThisInSuperMethodCall.ts(23,13): error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.


==== tests/cases/compiler/emitThisInSuperMethodCall.ts (3 errors) ====
    class User {
        sayHello() {
        }
    }
    
    class RegisteredUser extends User {
        f() {
            () => {
                function inner() {
                    super.sayHello();
                    ~~~~~
!!! error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.
                }
            };
        }
        g() {
            function inner() {
                () => {
                    super.sayHello();
                    ~~~~~
!!! error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.
                }
            }
        }
        h() {
            function inner() {
                super.sayHello();
                ~~~~~
!!! error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.
            }
        }
    }
    